# docs_versions_menu

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  doctr-versions-menu.conf  index.html  pyproject.toml  setup.cfg  setup.py  tox.ini  versions.json  versions.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codestyle.yml  docs.yml  pypi.yml  test.yml
.travis/: doctr_build.sh  doctr_post_process.py  versions.py
.travis/texlive/: texlive_install.sh
docs/: artifacts.rst  build_pdf.py  command.rst  conf.py  conftest.py  deployment.rst  doctr_deploy_key.enc  folderspecs.rst  index.rst  readme.rst  related_software.rst  spelling_wordlist.txt  sphinx_extension.rst  versions_json.rst
docs/_extensions/: dollarmath.py  sphinxclick.py
docs/_templates/: breadcrumbs.html  globaltocindex.html  layout.html  localtocindex.html  package.rst  sidebarhelp.html
master/: .buildinfo  .doctr-files  artifacts.html  authors.html  command.html  contributing.html  deployment.html  folderspecs.html  genindex.html  history.html  index.html  objects.inv  options.html  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  templates.html  versions_json.html
master/.doctrees/: authors.doctree  environment.pickle  folderspecs.doctree
master/_sources/: command.rst.txt  folderspecs.rst.txt  index.rst.txt
master/_static/: docs-versions-menu.js  doctr-versions-menu.js  documentation_options.js
rtd-theme/: .buildinfo  .doctr-files  artifacts.html  authors.html  command.html  contributing.html  deployment.html  folderspecs.html  genindex.html  history.html  index.html  objects.inv  options.html  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  templates.html  versions_json.html
rtd-theme/_sources/: artifacts.rst.txt  command.rst.txt  deployment.rst.txt  options.rst.txt  related_software.rst.txt  sphinx_extension.rst.txt
rtd-theme/_static/: docs-versions-menu.js  (+2 more)
scripts/: README.md  bootstrap.py  check_history.py  clean.py  pre-commit.py  release.py
src/: conftest.py
tests/: test_cli.py  test_docs_versions_menu.py  test_doctr_versions_menu.py  test_extension.py  test_folder_spec.py  test_groups.py  test_parse_version.py
v0.1.0/: .doctr-files  _downloads  artifacts.html  authors.html  command.html  objects.inv  readme.html  search.html  searchindex.js
v0.2.0/: .doctr-files  _downloads  artifacts.html  authors.html  command.html  contributing.html  folderspecs.html  genindex.html  history.html  index.html  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  versions_json.html
v0.2.0-rc1/: .doctr-files  _downloads  artifacts.html  authors.html  command.html  contributing.html  genindex.html  history.html  index.html  objects.inv  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html
v0.2.0-rc2/: .doctr-files  _downloads  artifacts.html  authors.html  command.html  contributing.html  folderspecs.html  genindex.html  history.html  index.html  objects.inv  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  versions_json.html
v0.3.0/: .doctr-files  _downloads  authors.html  contributing.html  genindex.html  readme.html  related_software.html  search.html
v0.4.0/: .buildinfo  _downloads  artifacts.html  command.html  history.html  index.html  readme.html  related_software.html  search.html  sphinx_extension.html  versions_json.html
v0.4.1/: .doctr-files  _downloads  artifacts.html  authors.html  command.html  contributing.html  folderspecs.html  readme.html  search.html  versions_json.html
v0.5.0/: .buildinfo  _downloads  authors.html  deployment.html  history.html  objects.inv  readme.html  related_software.html  search.html  sphinx_extension.html  templates.html
v0.5.0-rc0/: .buildinfo  _downloads  authors.html  contributing.html  index.html  objects.inv  readme.html  related_software.html  searchindex.js  templates.html
v0.5.0-rc1/: _downloads  authors.html  contributing.html  deployment.html  genindex.html  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  templates.html  versions_json.html
v0.5.0-rc2/: .buildinfo  _downloads  authors.html  deployment.html  history.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  versions_json.html
v0.5.1/: .buildinfo  _downloads  authors.html  contributing.html  deployment.html  folderspecs.html  genindex.html  history.html  index.html  objects.inv  options.html  readme.html  related_software.html  search.html  searchindex.js  sphinx_extension.html  templates.html  versions_json.html
v0.5.2/: _downloads  contributing.html  deployment.html  index.html  options.html
v0.6.0/: _downloads  authors.html  deployment.html  folderspecs.html  genindex.html  index.html  objects.inv  related_software.html  search.html  searchindex.js  templates.html  versions_json.html
(+88 files in other folders)
