[metadata]
license_file = LICENSE

[flake8]
exclude = docs
max-line-length = 79
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # don't care about "ambiguous variable names"
    E741,
    # when I use lambdas, I know what I'm doing
    E731,
    # not allowing blank lines after docstrings conflicts with Black
    D202,

[tool:pytest]
collect_ignore = ['setup.py', 'tests/test_extension/roots', 'docs/conf.py']
collect_ignore_glob = ["conf.py"]

[rstcheck]
ignore_directives=doctest
ignore_messages=(Hyperlink target "[^"]+" is not referenced\.$)
ignore_roles=cite


[isort]
known_first_party = doctr_versions_menu, docs_versions_menu
force_single_line = False
lines_after_imports = 2
line_length = 79
use_parentheses = True
multi_line_output = 3
include_trailing_comma = True
skip = src/docs_versions_menu/__init__.py

[coverage:run]
relative_files = True
